--- a/kubernetes-virtualservice.yml
+++ b/kubernetes-virtualservice.yml
@@ -16,7 +16,7 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: sprimg-boot
+  name: spring-boot
 spec:
   hosts:
   - "*"
